Removing recipe property serialization